# logger-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
logger_tools/: __init__.py  log_setup.py  logger.py  settings.py
odoo_logtracer/: log_setup.py  logger.py
